test/SILOptimizer/definite_init_address_only_let.swift
// RUN: %target-swift-frontend -emit-sil -verify %s
// RUN: %target-swift-frontend -emit-sil -enable-ownership-stripping-after-serialization -verify %s

func foo<T>(a: Bool, t: T) {
  let x: T
  defer { print(x) }

  x = t
  return
}

func bar<T>(a: Bool, t: T) {
  let x: T // expected-note {{defined here}}
  defer { print(x) } //expected-error{{constant 'x' used before being initialized}}

  if a {
    x = t
    return
  }
}

func bas<T>(a: Bool, t: T) {
  let x: T 
  defer { print(x) }

  if a {
    x = t
    return
  }

  x = t
}
